# ParallelLab1

./: CMakeLists.txt  Makefile  README.md  main.cpp
